# diagrams-tangles

./: .travis.yml  README.md  diagrams-tangles.cabal  stack.yaml
.github/workflows/: ci.yml
src/Math/Topology/KnotTh/: Draw.hs
src/Math/Topology/KnotTh/ChordDiagram/: Draw.hs
src/Math/Topology/KnotTh/SurfaceGraph/: Embedding.hs
src/Math/Topology/KnotTh/SurfaceGraph/Embedding/: Optimization.chs  QuadraticInitialization.hs  RelaxEmbedding.hs
