name:               diagrams-tangles
version:            0.0
author:             Alexander Mishunin
maintainer:         alexander.mishunin@gmail.com
stability:          Experimental
license:            LGPL-3
category:           Math
build-type:         Simple
cabal-version:      >=1.18


source-repository head
    type:     git
    location: https://github.com/mishun/diagrams-tangles.git


library
    default-language:   Haskell2010
    default-extensions: BangPatterns
    ghc-options:        -Wall
    ghc-prof-options:   -prof -auto-all -caf-all
    cc-options:         -Wall -std=c++11
    build-tools:        c2hs
    build-depends:
        base >=4.6,
        vector >=0.10,
        array,
        mtl,
        containers,
        diagrams-lib >=1.3,
        tangles
    hs-source-dirs:     src
    c-sources:
        src/Math/Topology/KnotTh/SurfaceGraph/Embedding/Optimization.cpp
    extra-libraries:    stdc++ gsl gslcblas
    include-dirs:       src/
    exposed-modules:
        Math.Topology.KnotTh.ChordDiagram.Draw,
        Math.Topology.KnotTh.Draw,
        Math.Topology.KnotTh.SurfaceGraph.Embedding
    other-modules:
        Math.Topology.KnotTh.SurfaceGraph.Embedding.Optimization,
        Math.Topology.KnotTh.SurfaceGraph.Embedding.QuadraticInitialization,
        Math.Topology.KnotTh.SurfaceGraph.Embedding.RelaxEmbedding
